--- a/roles/gelara/tasks/main.yml
+++ b/roles/gelara/tasks/main.yml
@@ -25,16 +25,16 @@
       - /etc/maria/docker-entrypoint-startdb.d:/docker-entrypoint-startdb.d:ro
       - /etc/maria/configs:/opt/bitnami/mariadb/conf/:rw
     env:
-      MARIADB_ROOT_USER: root
+      MARIADB_ROOT_USER: "root"
       MARIADB_ROOT_PASSWORD: "{{ mariadb_root_password }}"
-      MARIADB_USER: default
-      MARIADB_DATABASE: default
+      MARIADB_USER: "default"
+      MARIADB_DATABASE: "default"
       MARIADB_PASSWORD: "{{ mariadb_password }}"
       # MARIADB_GALERA_CLUSTER_NAME: mariadb-cluster
-      MARIADB_GALERA_MARIABACKUP_USER: backup
+      MARIADB_GALERA_MARIABACKUP_USER: "backup"
       MARIADB_GALERA_MARIABACKUP_PASSWORD: "{{ mariadb_backup_password }}"
-      MARIADB_GALERA_CLUSTER_BOOTSTRAP: "{{ bootstrap_cluster | default(False) }}"
-      MARIADB_REPLICATION_USER: replication
+      MARIADB_GALERA_CLUSTER_BOOTSTRAP: "{{ bootstrap_cluster | default(false) }}"
+      MARIADB_REPLICATION_USER: "replication"
       MARIADB_REPLICATION_PASSWORD: "{{ mariadb_replication_password }}"
       # MARIADB_GALERA_CLUSTER_ADDRESS: gcomm://
     healthcheck:
