--- a/roles/gelara/tasks/main.yml
+++ b/roles/gelara/tasks/main.yml
@@ -33,7 +33,7 @@
       # MARIADB_GALERA_CLUSTER_NAME: mariadb-cluster
       MARIADB_GALERA_MARIABACKUP_USER: "backup"
       MARIADB_GALERA_MARIABACKUP_PASSWORD: "{{ mariadb_backup_password }}"
-      MARIADB_GALERA_CLUSTER_BOOTSTRAP: "{{ bootstrap_cluster | default(false) }}"
+      MARIADB_GALERA_CLUSTER_BOOTSTRAP: "{{ bootstrap_cluster | default('no') }}"
       MARIADB_REPLICATION_USER: "replication"
       MARIADB_REPLICATION_PASSWORD: "{{ mariadb_replication_password }}"
       # MARIADB_GALERA_CLUSTER_ADDRESS: gcomm://
