fix permission problem

--- a/roles/gelara/tasks/main.yml
+++ b/roles/gelara/tasks/main.yml
@@ -4,6 +4,7 @@
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
+    owner: 1001
   loop:
     - /etc/maria
     - /etc/maria/data
