--- a/roles/gelara/tasks/main.yml
+++ b/roles/gelara/tasks/main.yml
@@ -9,12 +9,6 @@
     - /etc/maria
     - /etc/maria/data
     - /etc/maria/docker-entrypoint-startdb.d
-    - /etc/maria/configs
-
-- name: Template fixtures
-  ansible.builtin.template:
-    src: my_custom.cnf.j2
-    dest: /etc/maria/configs/my_custom.cnf
 
 - name: Setup maria
   community.docker.docker_container:
@@ -24,20 +18,19 @@
     volumes:
       - /etc/maria/data:/bitnami/mariadb:rw
       - /etc/maria/docker-entrypoint-startdb.d:/docker-entrypoint-startdb.d:ro
-      - /etc/maria/configs/my_custom.cnf:/opt/bitnami/mariadb/conf/my_custom.cnf:ro
     env:
       MARIADB_ROOT_USER: "root"
       MARIADB_ROOT_PASSWORD: "{{ mariadb_root_password }}"
       MARIADB_USER: "default"
       MARIADB_DATABASE: "default"
       MARIADB_PASSWORD: "{{ mariadb_password }}"
-      # MARIADB_GALERA_CLUSTER_NAME: mariadb-cluster
+      MARIADB_GALERA_CLUSTER_NAME: mariadb-cluster
       MARIADB_GALERA_MARIABACKUP_USER: "backup"
       MARIADB_GALERA_MARIABACKUP_PASSWORD: "{{ mariadb_backup_password }}"
       MARIADB_GALERA_CLUSTER_BOOTSTRAP: "{{ bootstrap_cluster | default('no') }}"
       MARIADB_REPLICATION_USER: "replication"
       MARIADB_REPLICATION_PASSWORD: "{{ mariadb_replication_password }}"
-      # MARIADB_GALERA_CLUSTER_ADDRESS: gcomm://
+      MARIADB_GALERA_CLUSTER_ADDRESS: "gcomm://{% for host in groups['maria'][:-1] %}{{ hostvars[host].ansible_host }},{% endfor %}{{ hostvars[groups['maria'][-1]].ansible_host }}"
     healthcheck:
       test: ['CMD', '/opt/bitnami/scripts/mariadb-galera/healthcheck.sh']
       interval: 15s
