--- a/deployment.yml
+++ b/deployment.yml
@@ -33,3 +33,33 @@
     - docker
   tags:
     - docker
+
+- name: Bootstrap cluster 
+  hosts: maria[0]
+  become: true
+  roles:
+    - gelara
+  vars:
+    bootstrap_cluster: 'yes'
+  tags:
+    - bootstrap
+    - maria
+
+- name: Add masters to cluster
+  hosts:
+    - "!maria[0]"
+    - maria
+  become: true
+  roles:
+    - gelara
+  tags:
+    - masters
+    - maria
+
+- name: Deploy lbs
+  hosts: lb
+  become: true
+  roles:
+    - haproxy
+  tags:
+    - haproxy
