--- a/roles/grafana/tasks/main.yml
+++ b/roles/grafana/tasks/main.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: Create directories
   ansible.builtin.file:
     path: "{{ item }}"
@@ -7,23 +6,18 @@
     owner: 1001
   loop:
     - /etc/grafana
-
-# - name: Configuring grafana
-#   become: true
-#   ansible.builtin.template:
-#     src: grafana.cfg.j2
-#     dest: /etc/grafana/grafana.cfg
-#     mode: 0644
-#   register: config_template
+    - /etc/grafana/data
 
 - name: Setup grafana
   community.docker.docker_container:
     name: "grafana"
     image: "{{ grafana_image }}"
     network_mode: host
-    # restart: "{{ config_template.changed }}"
     volumes:
-      # - /etc/grafana/grafana.cfg:/bitnami/grafana/conf/grafana.cfg:ro
+      - /etc/grafana/data:/var/lib/grafana:rw
+    envs:
+      - GF_SECURITY_ADMIN_USER: "admin"
+      - GF_SECURITY_ADMIN_PASSWORD: "{{ monitoring_admin_password }}"
     # healthcheck:
     #   test: ['CMD', '/opt/bitnami/scripts/grafana/healthcheck.sh']
     #   interval: 15s
