--- a/inventories/hosts.ini
+++ b/inventories/hosts.ini
@@ -1,8 +1,3 @@
-[docker-iran:children]
-gateway
-
-[docker:children]
-
 [gateway]
 gateway01 ansible_host=192.168.1.45 public_address=188.121.104.66
 
@@ -16,3 +11,9 @@ master03 ansible_host=192.168.1.208
 
 [monitoring]
 monitoring01 ansible_host=192.168.1.134
+
+[registry:children]
+runner
+
+[runner]
+runner01 ansible=192.168.1.133
