--- a/deployment.yml
+++ b/deployment.yml
@@ -66,7 +66,11 @@
   tags:
     - registry
     - ci/cd
-
+- name: test linting error
+  tasks:
+        - name:
+          copy:
+            dest: 32323
 - name: Deploy github actions runner
   hosts: runner
   become: true
