--- a/roles/docker/handlers/main.yml
+++ b/roles/docker/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Restart docker service
-  ansible.builtin.service:
+  ansible.builtin.systemd:
     name: docker
     state: restarted
     daemon_reload: true
