--- a/roles/gelara/tasks/main.yml
+++ b/roles/gelara/tasks/main.yml
@@ -5,6 +5,7 @@
     path: "{{ item }}"
     state: directory
     owner: 1001
+    mode: 0755
   loop:
     - /etc/maria
     - /etc/maria/data
@@ -30,7 +31,10 @@
       MARIADB_GALERA_CLUSTER_BOOTSTRAP: "{{ bootstrap_cluster | default('no') }}"
       MARIADB_REPLICATION_USER: "replication"
       MARIADB_REPLICATION_PASSWORD: "{{ mariadb_replication_password }}"
-      MARIADB_GALERA_CLUSTER_ADDRESS: "gcomm://{% for host in groups['maria'][:-1] %}{{ hostvars[host].ansible_host }},{% endfor %}{{ hostvars[groups['maria'][-1]].ansible_host }}"
+      MARIADB_GALERA_CLUSTER_ADDRESS: >-
+        "gcomm://{% for host in groups['maria'][:-1] %}\
+        {{ hostvars[host].ansible_host }},{% endfor %}\
+        {{ hostvars[groups['maria'][-1]].ansible_host }}"
     healthcheck:
       test: ['CMD', '/opt/bitnami/scripts/mariadb-galera/healthcheck.sh']
       interval: 15s
@@ -38,7 +42,7 @@
       retries: 6
 
 - name: Wait until DB is available
-  ansible.builtin.wait_for: 
+  ansible.builtin.wait_for:
     host: "{{ hostvars[inventory_hostname].ansible_host }}"
     port: 3306
     delay: 5
