--- a/.github/workflows/db-exporter.yml
+++ b/.github/workflows/db-exporter.yml
@@ -6,8 +6,8 @@ on:
       - master
     paths:
       - ".github/workflows/db-exporter.yml"
-      - "apps/db-exporter/**"
-      - "apps/db-exporter/*"
+      - ./apps/db-exporter/**"
+      - ./apps/db-exporter/*"
   workflow_dispatch:
 
 jobs:
@@ -34,7 +34,7 @@ jobs:
           echo "::set-output name=registry_hostname::$content"
       
       - name: Build image
-        working-directory: /apps/db-exporter
+        working-directory: ./apps/db-exporter
         run: |
           docker build -t ${{steps.set_registry_hostname.outputs.registry_hostname}}:5000/db-exporter:latest
 
