--- a/roles/gelara/tasks/main.yml
+++ b/roles/gelara/tasks/main.yml
@@ -16,6 +16,7 @@
     name: "mariadb"
     image: "{{ mariadb_image }}"
     network_mode: host
+    restart_policy: unless-stopped
     volumes:
       - /etc/maria/data:/bitnami/mariadb:rw
       - /etc/maria/docker-entrypoint-startdb.d:/docker-entrypoint-startdb.d:ro
