sudo add to haproxy setup

--- a/roles/haproxy/tasks/main.yml
+++ b/roles/haproxy/tasks/main.yml
@@ -29,6 +29,7 @@
   register: config_template
 
 - name: Setup haproxy
+  become: true
   community.docker.docker_container:
     name: "haproxy"
     image: "{{ haproxy_image }}"
