--- a/roles/gelara/tasks/main.yml
+++ b/roles/gelara/tasks/main.yml
@@ -11,12 +11,22 @@
     - /etc/maria/data
     - /etc/maria/docker-entrypoint-startdb.d
 
+- name: Template SQL init script
+  ansible.builtin.template:
+    src: "init-script.sql.j2"
+    dest: "/etc/maria/docker-entrypoint-startdb.d/init-script.sql"
+    owner: 1001
+    group: 1001
+    mode: "0755"
+  register: script_template
+
 - name: Setup maria
   community.docker.docker_container:
     name: "mariadb"
     image: "{{ mariadb_image }}"
     network_mode: host
     restart_policy: unless-stopped
+    restart: "{{ script_template.changed }}"
     volumes:
       - /etc/maria/data:/bitnami/mariadb:rw
       - /etc/maria/docker-entrypoint-startdb.d:/docker-entrypoint-startdb.d:ro
