--- a/roles/exporters/tasks/mysql-exporter.yml
+++ b/roles/exporters/tasks/mysql-exporter.yml
@@ -25,4 +25,4 @@
       - --log.level=debug
       - --tls.insecure-skip-verify
     env:
-      DATA_SOURCE_NAME: "root:{{ mariadb_root_password }}@(db:3306)/"
+      DATA_SOURCE_NAME: "root:{{ mariadb_root_password }}@(bdd:3306)/"
