--- a/apps/emitter/Dockerfile
+++ b/apps/emitter/Dockerfile
@@ -4,7 +4,8 @@ ENV PYTHONUNBUFFERED=1
 
 USER root
 
-RUN apt-get update && apt-get install -y apt-utils python3-dev libmariadb3 libmariadb-dev
+RUN apt-get update && apt-get install -y apt-utils python3-dev\
+     libmariadb3 libmariadb-dev libssl-dev build-essential
 
 RUN mkdir /app
 
