--- a/.github/workflows/emitter.yml
+++ b/.github/workflows/emitter.yml
@@ -5,9 +5,9 @@ on:
     branches:
       - master
     paths:
-      - ".github/workflows/emitter.yml"
-      - ./apps/emitter/**"
-      - ./apps/emitter/*"
+      - '.github/workflows/emitter.yml'
+      - './apps/emitter/**'
+      - './apps/emitter/*'
 
 jobs:
   build:
