--- a/roles/emitter/tasks/main.yml
+++ b/roles/emitter/tasks/main.yml
@@ -3,5 +3,12 @@
   community.docker.docker_container:
     image: "{{ groups['runner'].0 }}:5000/emitter:latest"
     name: "mariadb-emitter-{{ item }}"
+    pull: true
+    env:
+      MARIADB_USER: "default"
+      MARIADB_DATABASE: "default"
+      MARIADB_PASSWORD: "{{ mariadb_password }}"
+      MARIADB_HOST: "{{ hostvars[groups['maria'].0].ansible_host }}"
+      MARIADB_PORT: 3306
     restart_policy: always
   with_sequence: "0-{{ emitter_numbers }}"
