add custom exporter to deployment

--- a/.github/workflows/db-exporter.yml
+++ b/.github/workflows/db-exporter.yml
@@ -6,8 +6,8 @@ on:
       - master
     paths:
       - '.github/workflows/db-exporter.yml'
-      - './apps/db-exporter/**'
-      - './apps/db-exporter/*'
+      - 'apps/db-exporter/**'
+      - 'apps/db-exporter/*'
 
 jobs:
   build:
