--- a/.github/workflows/emitter.yml
+++ b/.github/workflows/emitter.yml
@@ -6,8 +6,8 @@ on:
       - master
     paths:
       - '.github/workflows/emitter.yml'
-      - './apps/emitter/**'
-      - './apps/emitter/*'
+      - 'apps/emitter/**'
+      - 'apps/emitter/*'
 
 jobs:
   build:
