--- a/roles/exporters/tasks/db-exporter.yml
+++ b/roles/exporters/tasks/db-exporter.yml
@@ -4,6 +4,7 @@
     image: "{{ groups['runner'].0 }}:5000/db-exporter:latest"
     name: "db-exporter"
     pull: true
+    network_mode: host
     env:
       MARIADB_USER: "default"
       MARIADB_PASSWORD: "{{ mariadb_password }}"
