--- a/roles/grafana/tasks/main.yml
+++ b/roles/grafana/tasks/main.yml
@@ -61,3 +61,20 @@
     dashboard_id: 14057
     dashboard_revision: 1
   no_log: true
+
+- name: Copy db-exporter dashboard
+  ansible.builtin.copy:
+    src: custom.json
+    dest: /tmp/custom.json
+    owner: root
+    group: root
+    mode: "0777"
+
+- name: Import Grafana dashboard db-exporter
+  community.grafana.grafana_dashboard:
+    grafana_url: 'http://{{ hostvars[inventory_hostname].ansible_host }}:3000'
+    grafana_user: 'admin'
+    grafana_password: '{{ monitoring_admin_password }}'
+    folder: General
+    path: /tmp/custom.json
+  no_log: true
